k8s/webnotes-client.yml
# k8s/webnotes-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnotes-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webnotes-client
  template:
    metadata:
      labels:
        app: webnotes-client
    spec:
      containers:
        - name: webnotes-client
          image: jessyfal04/webnotes-client:latest
          ports:
            - containerPort: 8080            # REST + UI
          volumeMounts:
            - name: static-volume
              mountPath: /static
              readOnly: true
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: webnotes-static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webnotes-client
spec:
  selector:
    app: webnotes-client
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
